@@ -1,0 +1,22 @@
+Pagemanager_XH -- a CMSimple_XH plugin
+Copyright (c) 2011-2012 Christoph M. Becker
+
+Tento program je svobodný software: mùžete jej šíøit nebo modifikovat
+a to podle podmínek GNU General Public License, vydávané
+Free Software Foundation, buï ve verzi 3 licence, nebo
+(podle vašeho uvážení) kterékoli pozdìjší verze.
+
+Tento program je rozšiøován v nadìji, že bude užiteèný,
+ale BEZ JAKÉKOLIV ZÁRUKY; dokonce i bez pøedpokládané záruky
+PRODEJNOSTI anebo VHODNOSTI PRO URÈITÝ ÚÈEL. viz
+GNU General Public License pro více informací.
+
+Mìli by jste obdržet kopii GNU General Public License
+spolu s tímto programem (viz license.txt).
+
+Pro další informace viz nápovìda help/help_cs.htm.
+
+Christoph M. Becker
+Präsident-Mohr-Straße 21
+55218 Ingelheim
+mailto: cmbecker69@gmx.de
