@@ -189,7 +189,7 @@ So offending extensions should be updated!</p>
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
 <p>Slovak translation &copy; 2011 Dr. Martin Sereday<br>
-Czech translation &copy; 2011 Josef Nemec<br>
+Czech translation &copy; 2011-2012 Josef Nemec<br>
 Danish translation &copy; 2011 Jens Maegaard<br>
 French translation &copy; 2011 Patrick Varlet<br>
 Russian translation &copy; 2012 Lybomyr Kydray<br>
