@@ -204,7 +204,7 @@ die sich nicht daran halten!</p>
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a> verwendet werden.</p>
 <p>&copy; 2011-2012Christoph M. Becker</p>
 <p>Slowakische Übersetzung &copy; 2011 Dr. Martin Sereday<br>
-Tschechische Übersetzng &copy; 2011 Josef Nemec<br>
+Tschechische Übersetzng &copy; 2011-2012 Josef Nemec<br>
 Dänische Übersetzung &copy; 2011 Jens Maegaard<br>
 Französische Übersetzung &copy; 2011 Patrick Varlet<br>
 Russische Übersetzung &copy; 2012 Lybomyr Kydray<br>
