@@ -154,7 +154,7 @@ Preto musia byť všetky takéto kódy aktualizované!</p>
 <a href="http://www.gnu.org/licenses/gpl.html">GPLv3</a>.</p>
 <p>&copy; 2011-2012 Christoph M. Becker</p>
 <p>Slovenský preklad &copy; 2011 Dr. Martin Sereday<br>
-České preklady &copy; 2011 Josef Nemec<br>
+České preklady &copy; 2011-2012 Josef Nemec<br>
 Dánsky preklad &copy; 2011 Jens Maegaard<br>
 Francúzsky preklad &copy; 2011 Patrick Varlet<br>
 Preklad do ruštiny &copy; 2012 Lybomyr Kydray<br>
