@@ -1,0 +1,47 @@
+<?php
+
+$plugin_tx['pagemanager']['cf_verbose']="<p>ukázat informace a potvrzovací dialogy? <b>true</b> nebo <b>false</b></p><p><strong><b>true</b> je doporučeno</strong>, pokud nejste dostatečně zkušený  <strong>a</strong> a dobře neznáte Pagemanager_XH.</p>";
+$plugin_tx['pagemanager']['cf_toolbar_show']="<p>Ukázat nástrojovou lištu? <b>true</b> nebo <b>false</b></p>";
+$plugin_tx['pagemanager']['cf_toolbar_vertical']="<p>Ukázat nástrojovou lištu vertikálně? <b>true</b> nebo <b>false</b></p><p>Tato volba je pro zkušené, kteří umějí upravit styl pluginu.</p>";
+$plugin_tx['pagemanager']['cf_pagedata_attribute']="<p>Volba YES/NO (předvoleno YES) pro vlastnosti pagedata pro checkboxy, např.: <b>published</b> nebo <b>linked_to_menu</b>.</p><p><strong>Upozornění:</strong> Pokud zvolíte nesprávnou vlastnost, poškodíte pagedata.php!</p>";
+$plugin_tx['pagemanager']['cf_treeview_theme']="<p>Téma stromového modulu: <b>cmsimple</b></p><p>Další vzhledy jsou ke stažení na: http://3-magi.net/?CMSimple_XH/Pagemanager_XH.</p>";
+$plugin_tx['pagemanager']['cf_treeview_animation']="<p>Čas otevření/zavření animace v ms. 0 znamená bez animace.</p>";
+$plugin_tx['pagemanager']['cf_utf8_marker']="<p>Interní použití. <strong>NEMĚNIT!</strong></p>";
+$plugin_tx['pagemanager']['menu_main']="Správa stránek";
+$plugin_tx['pagemanager']['op_expand']="Rozbalit všechny stránky";
+$plugin_tx['pagemanager']['op_collapse']="Smazat všechny strany";
+$plugin_tx['pagemanager']['op_create']="Vytvořit stránku (<em>jako podstránku</em>)";
+$plugin_tx['pagemanager']['op_create_after']="Vytvořiť stránku (<em>na stejné úrovni - za poslední podstránkou</em>)";
+$plugin_tx['pagemanager']['op_rename']="Přejmenovat stránku";
+$plugin_tx['pagemanager']['op_delete']="Vymazat stránku (<em>včetně podstran</em>)";
+$plugin_tx['pagemanager']['op_cut']="Vystřihnout";
+$plugin_tx['pagemanager']['op_copy']="Kopírovat";
+$plugin_tx['pagemanager']['op_paste']="Vložit (<em>jako podstranu</em>)";
+$plugin_tx['pagemanager']['op_paste_after']="Vložit (<em>na stejnéj úrovni - za poslední podstránkou</em>)";
+$plugin_tx['pagemanager']['op_help']="<p>Stránky můžete přemísťovat pomocí <em>drag&drop</em>. <em>Kliknutím pravým tlačítkem na stránku</em> otevřete kontextové menu. Podrobnější pokyny najdete v help.htm.</p>";
+$plugin_tx['pagemanager']['treeview_loading']="Načítám....";
+$plugin_tx['pagemanager']['treeview_new']="Nová strana";
+$plugin_tx['pagemanager']['button_delete']="Vymazat";
+$plugin_tx['pagemanager']['button_ok']="OK";
+$plugin_tx['pagemanager']['button_cancel']="Zrušit";
+$plugin_tx['pagemanager']['message_confirm']="Potvrzení";
+$plugin_tx['pagemanager']['message_confirm_deletion']="Strana bude smazána včetně podstran!";
+$plugin_tx['pagemanager']['message_warning_leave']="Vaše nastavení bude ztraceno!";
+$plugin_tx['pagemanager']['message_confirm_leave']="*** ÚPRAVY NEBYLY ULOŽENY! ***\r\n\r\nPotvrďte uložení, jinak nebudou změny uloženy!\r\n";
+$plugin_tx['pagemanager']['message_information']="Informace";
+$plugin_tx['pagemanager']['message_menu_level']="Toto přesahuje <em>úrovně menu</em> - potvrďte!";
+$plugin_tx['pagemanager']['message_no_selection']="Dřív než použijete tento nástroj, musíte zvolit stránku!";
+$plugin_tx['pagemanager']['message_delete_last']="Nemůžeš smazat poslední stranu 1. úrovně!";
+$plugin_tx['pagemanager']['error_phpversion']="Pagemanager_XH vyžaduje poslední verzi PHP %s!";
+$plugin_tx['pagemanager']['error_extension']="Pagemanager_XH vyžaduje PHP's %s rozšíření!";
+$plugin_tx['pagemanager']['error_jquery']="<p><strong>Pagemanager_XH vyžaduje jQuery4CMSimple plugin!</strong></p><p>Prosím <a href='http://www.cmsimple-xh.com/wiki/doku.php/plugins:jquery4cmsimple'>stáhněte</a> nainstalujte před prvním použitím.</p>";
+$plugin_tx['pagemanager']['error_utf8']="<p><strong>Pagemanager_XH vyžaduje Utf8_XH plugin!</strong></p><p>Prosím <a href='http://3-magi.net/?CMSimple_XH/Utf8_XH'>stáhněte</a> nainstalujte před prvním použitím.</p>";
+$plugin_tx['pagemanager']['error_encoding']="Pagemanager_XH Vyžaduje kódování UTF-8!";
+$plugin_tx['pagemanager']['error_structure_confirmation']="Vím <em>přesně</em>, co nyní dělám! Chci pokračovat.";
+$plugin_tx['pagemanager']['error_structure_warning']="<strong>Chybná struktura stránek.</strong> Detailní info je  v help.htm. Kontaktuje správce stránek!";
+$plugin_tx['pagemanager']['error_nesting']="Příliš hluboko vnořeno v úrovni stránek!";
+$plugin_tx['pagemanager']['error_cant_rename']="Tuto stránku není možné přejmenovat, protože její název je částečně formátován.";
+$plugin_tx['pagemanager']['error_offending_extension']="Offending extension using its own jQuery library detected (see manual, section \"Limitations\").";
+$plugin_tx['pagemanager']['utf8_marker']="ěščřžýáíé";
+
+?>
