@@ -1,3 +1,6 @@
+Version 1pl8 - released 2012-09-23
+cmb     updated Czech translation and added Czech README and manual (contributed by oldnema)
+
 Version 1pl7 - released 2012-09-20
 cmb     removed javascript: pseudo protocoll
 cmb     fixed typo in English language file
